custom_css/guide_page.css
/* ... */
.icon-note > p {
  font-family: Arial, Helvetica, sans-serif;
  font-size: xx-small;
  font-weight: bold;
  color: white;
  margin: 0px;
  padding: 0px;
}

.shopItemContainer {
  align-content: flex-start!important;
  align-items: flex-start!important;
  display: flex;
  flex-wrap: wrap;
}

.shopIcon {
  overflow: hidden;
  margin: 2px;
  width: 60px;
  padding: 2px;
  box-shadow: 0 10px 25px 0 #000;
  height: auto;
}


/* Ship Row Containers */

div.shipRowContainer {
  margin: 20px 10px;
  text-align: center;
  display: flex;
  flex-wrap: wrap;
}

.shipRowContainer>div {
  border: 1px solid grey;
  padding: 10px;
  width: 120px;
  min-height: 90px;
}

.shipRowCell {
  flex: 0 0 auto;
  max-width: 100%;
  word-wrap: normal;
  font-size: smaller;
}

.shipRowCell:hover {
  border: 1px solid orange;
  background-color: #3b444bb9;
}

div.modifiedShipRowContainer {
  margin: 20px 10px;
  text-align: center;
  display: flex;
  flex-wrap: wrap;
}

.modifiedShipRowContainer>div {
  border: 0px;
  padding: 10px;
  width: 120px;
  min-height: 90px;
}

.modifiedShipRowCell {
  flex: 0 0 auto;
  max-width: 100%;
  word-wrap: normal;
}

.location-note {
  border-top: 1px solid grey;
  margin-top: 3px;
  padding-top: 3px;
}

.location-note > p {
  font-size: smaller!important;
  margin-bottom: 0px;
}

.description-note {
  border-top: 1px solid grey;
  margin-top: 3px;
  padding-top: 3px;
  /* font-size: smaller!important; */
}

.description-note > p, .description-note > a {
  font-size: smaller!important;
  margin-bottom: 0px;
}

/* Carousel */

.carousel-caption > p {
  padding: 10px;
  border-radius: 10px;
  box-shadow: 2px 2px 9px 3px #555;
  background-color: rgba(0, 0, 0, 0.7);
  color: hsla(0, 0%, 100%, 0.6);
}

.carousel-item {
  background-color: rgba(0, 0, 0, 0.5);
  padding: min(20px, 1%);
  border-radius: 20px
}

.carousel-item > img {
  object-fit: cover;
  max-height: 400px;
  width: auto!important;
  margin: auto;
}

.carousel-slide {
  margin: 21px 0;
}

.carousel {
  position: relative;
}



/* table of contents */

.toc {
  margin-top: 1em;
  margin-bottom: 0em;
}

.toc ol {
  list-style-type: none;
  counter-reset: item;
  margin-top: 0.6em;
  margin-bottom: 0.6em;
  margin-right: 0.6em;
  margin-left: 0.2em;
  padding: 0;
}

.toc ol > li {
  display: table;
  counter-increment: item;
  margin-bottom: 0.5em;
  line-height: 130%;
}

.toc li:before {
  content: counters(item, ".") ". ";
  display: table-cell;
  padding-right: 0.6em;
}

.toc li {
  margin: 0px;
}

.toc li ol > li:before {
  content: counters(item, ".") " ";
}

/* The side navigation menu */
.sidenav {
  height: 100%; /* 100% Full-height */
  width: 0; /* 0 width - change this with JavaScript */
  position: fixed; /* Stay in place */
  z-index: 1; /* Stay on top */
  top: 56px; /* Stay at the top */
  left: 0;
  background-color: #111; /* Black*/
  overflow-x: hidden; /* Disable horizontal scroll */
  padding-top: 15px;
  padding-bottom: 60px;
  transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
}

.sidenav.toggle {
  width: 250px;
}

/* Position and style the close button (top right corner) */
/* .sidenav .closebtn {
  position: absolute;
  top: 0;
  right: 25px;
  font-size: 36px;
  margin-left: 50px;
} */

/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
/* #main {
  transition: margin-left .5s;
  padding: 20px;
} */

/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
/* @media screen and (max-height: 568px) {
  .sidenav {padding-top: 15px;}
  .sidenav a {font-size: 18px;}
} */

.custom-sidenav-button {
  transform: rotate(90deg);
  position: fixed;
  top: 16.5px;
  left: 0px;
  transform-origin: bottom left;
  transition: 0.5s;
  background-color: #1b1b1b;
  border: 2px solid gray;
  color: hsla(0,0%,100%,.9);
}

.custom-sidenav-button:hover {
  border: 2px solid pink;
  background-color: #363636;
  color: hsla(0,0%,100%,.9);
}

.custom-sidenav-button.toggle {
  left: 250px;
  border: 2px solid pink;
  background-color: #363636;
  color: hsla(0,0%,100%,.9);
}

#sidenavToggleDown {
  display: none;
}

.custom-sidenav-button.toggle > #sidenavToggleUp {
  display: none;
}

.custom-sidenav-button.toggle > #sidenavToggleDown {
  display: inline-block;
}

/* container-sm-9 is 75% width so breakpoint * 0.25 >= 250 */
@media screen and (min-width: 1000px) {
  .sidenav-header {
    display: inline !important;
  }
  .sidenav-header > h2 {
    font-size: 1.7rem;
  }

  .sidenav {
    width: 250px;
  }
  .custom-sidenav-button {
    left: 250px;
  }
  .custom-sidenav-button > .d-sm-inline {
    display: none !important;
  }
  #sidenavToggleUp {
    display: none;
  }
  #sidenavToggleDown {
    display: inline-block;
  }

  .sidenav.custom-sidenav-collapse {
    width: 0;
  }
  .custom-sidenav-button.custom-sidenav-collapse {
    left: 0;
  }
  .custom-sidenav-button.custom-sidenav-collapse > .d-sm-inline {
    display: inline !important;
  }
  .custom-sidenav-button.custom-sidenav-collapse > #sidenavToggleUp {
    display: inline-block;
  }
  .custom-sidenav-button.custom-sidenav-collapse > #sidenavToggleDown {
    display: none;
  }
}

/* max breakpoint = 1320px (container max width) + 500px */
@media screen and (min-width: 1000px) and (max-width: 1820px){
  .guide-content-body {
    margin-left: 250px;
  }
}



/* iframe */

iframe.custom-iframe {
  width: 100%;
  height: 1000px!important;
  overflow-x: scroll;
  border: none;
  zoom: 0.75;
  margin-bottom: 2em;
}



/* Shop Priority */

.shop-column-heading-container {
  display: flex;
  margin: 0;
  padding: 0;
}

.priority-heading-filler {
  width: 25px;
  border: 1px solid grey;
  height: 25px;
  margin: none;
}

.shop-column-heading-1 {
  border: 1px solid grey;
  text-align: center;
  width: 301.5px;
  height: 25px;
  margin: none;
}
/* ... */

